--- a/src/index.css
+++ b/src/index.css
@@ -35,8 +35,12 @@ a {
 }
 
 main {
-  padding: 1rem 1rem;
+  padding: 1rem 2rem;
   flex: 1;
+}
+
+h1 {
+  margin-bottom: 1rem;
 }
 
 .menu-section {
