--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 html {
+  scrollbar-gutter: stable;
   scroll-behavior: smooth;
 }
 
@@ -53,8 +54,8 @@ h1 {
   padding-top: 1rem;
   padding-bottom: 1rem;
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 20px;
+  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  gap: 1.5rem;
 
   @media screen and (max-width: 900px) {
     grid-template-columns: 1fr;
