--- a/src/components/MenuNavbar.module.css
+++ b/src/components/MenuNavbar.module.css
@@ -17,11 +17,12 @@
     cursor: pointer;
     padding-top: 1rem;
     padding-bottom: 1rem;
+    border-bottom: 3px solid transparent;
+    transition: 300ms;
 }
 
 .activeSection {
     border-bottom: 3px solid var(--text-secondary);
-    font-weight: bold;
     color: var(--text-primary);
-    transition: 300ms;
+    transform: scale(1.04);
 }
