--- a/src/pages/TableDetail.module.css
+++ b/src/pages/TableDetail.module.css
@@ -1,19 +1,29 @@
+main {
+    padding: 0;
+    margin: 0;
+}
+
 .tableDetailMain {
     display: grid;
-    /* grid-template-columns: 1fr 1fr; */
-    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-    gap: 1rem;
+    grid-template-columns: repeat(auto-fit, minmax(370px, 1fr));
 
     section {
         display: flex;
         flex-direction: column;
+        margin: 0;
+        border-right: 1px solid var(--border);
+        border-bottom: 1px solid var(--border);
+        border-top: 1px solid var(--border);
+        
+        > * {
+            padding: .75rem;
+        }
     }
 }
 
 .tableHeader {
     border-top: 1px solid var(--border);
     border-bottom: 1px solid var(--border);
-    padding: .75rem 0 .75rem 0;
 }
 
 .clients {
@@ -52,7 +62,7 @@
     border-radius: .3rem;
     padding: .25rem .25rem;
     align-items: center;
-    margin: .5rem 0 .5rem 0;
+    margin: .5rem;
     background: var(--cards-secondary);
     color: var(--text-primary);
 
